--- a/test/fixtures/cocktails.yml
+++ b/test/fixtures/cocktails.yml
@@ -1,11 +1,21 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-# This model initially had no columns defined. If you add columns to the
-# model remove the "{}" from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-# column: value
+one:
+  name: MyString
+  image: MyString
+  category: MyString
+  type: 
+  glass: MyString
+  ingredients: MyString
+  instructions: MyString
+  date_modified: 2022-10-22
+
+two:
+  name: MyString
+  image: MyString
+  category: MyString
+  type: 
+  glass: MyString
+  ingredients: MyString
+  instructions: MyString
+  date_modified: 2022-10-22
